force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__ActualCancelDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ActualCancelDate__c</fullName>
    <label>Actual Cancel Date</label>
    <type>Date</type>
</CustomField>