force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__ActualNewRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ActualNewRegistrationDate__c</fullName>
    <label>Actual New Registration Date</label>
    <type>Date</type>
</CustomField>