force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__ApplicationName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ApplicationName__c</fullName>
    <label>Application Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>