force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__ApplicationReceiptDatefromCustomer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ApplicationReceiptDatefromCustomer__c</fullName>
    <label>Application Receipt Date from Customer</label>
    <type>Date</type>
</CustomField>