force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__ApplicationSubmissionDateToVendor__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ApplicationSubmissionDateToVendor__c</fullName>
    <label>Application Submission Date to Vendor</label>
    <type>Date</type>
</CustomField>