force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__ApplicationType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ApplicationType__c</fullName>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ApplicationType</valueSetName>
    </valueSet>
</CustomField>