force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__CompletionNoticeDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CompletionNoticeDate__c</fullName>
    <label>Completion Notice Date</label>
    <type>Date</type>
</CustomField>