force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__ConfirmedDispatchRequestDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ConfirmedDispatchRequestDate__c</fullName>
    <label>Confirmed Dispatch Request Date</label>
    <type>Date</type>
</CustomField>