force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__ContactDetailDeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContactDetailDeliveryAddress__c</fullName>
    <label>Contact Detail of Delivery Address</label>
    <type>TextArea</type>
</CustomField>