force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__CorporateMyNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CorporateMyNumber__c</fullName>
    <label>Corporate My Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>