force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__DeliveryAddressDetail__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DeliveryAddressDetail__c</fullName>
    <label>Delivery Address Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>