force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__DispatchCompletionNoticeDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DispatchCompletionNoticeDate__c</fullName>
    <label>Dispatch Completion Notice Date</label>
    <type>Date</type>
</CustomField>