force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__DispatchInfoContactDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DispatchInfoContactDate__c</fullName>
    <label>Dispatch Info Contact Date</label>
    <type>Date</type>
</CustomField>