force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__ExpectedChangeDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ExpectedChangeDate__c</fullName>
    <label>Expected Change Date</label>
    <type>Date</type>
</CustomField>