force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__ExpectedNewRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ExpectedNewRegistrationDate__c</fullName>
    <label>Expected New Registration Date</label>
    <type>Date</type>
</CustomField>