force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__PIC__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.I.C</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PIC</relationshipName>
    <type>Lookup</type>
</CustomField>