force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__PICCustomer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PICCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.I.C of Customer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.clofor_com_cfs__Customer__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>APPLICATION</relationshipLabel>
    <relationshipName>ApplicationPICCustomer</relationshipName>
    <type>Lookup</type>
</CustomField>