force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__PICEmailDeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PICEmailDeliveryAddress__c</fullName>
    <label>P.I.C Email of Delivery Address</label>
    <type>Email</type>
</CustomField>