force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__PICOfPaymentTo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PICOfPaymentTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.I.C of Payment To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.clofor_com_cfs__PaymentTo__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>APPLICATION (P.I.C OF PAYMENT TO)</relationshipLabel>
    <relationshipName>ApplicationPICPaymentTo</relationshipName>
    <type>Lookup</type>
</CustomField>