force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__PICResellerAgent__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PICResellerAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.I.C of Reseller Agent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.clofor_com_cfs__ResellerAgent__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>APPLICATION(P.I.C OF RESELLER)</relationshipLabel>
    <relationshipName>ApplicationResellerAgent</relationshipName>
    <type>Lookup</type>
</CustomField>