force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__PreviousApplication__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PreviousApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Application</label>
    <referenceTo>clofor_com_cfs__Application__c</referenceTo>
    <relationshipLabel>NEXT APPLICATION</relationshipLabel>
    <relationshipName>PreviousApplication</relationshipName>
    <type>Lookup</type>
</CustomField>