force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__Quote__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>clofor_com_cfs__Quote__c</referenceTo>
    <relationshipLabel>APPLICATION</relationshipLabel>
    <relationshipName>Application</relationshipName>
    <type>Lookup</type>
</CustomField>