force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__ReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReceiptDate__c</fullName>
    <label>Receipt Date</label>
    <type>Date</type>
</CustomField>