force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__RequestedShippingDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RequestedShippingDate__c</fullName>
    <label>Requested Shipping Date</label>
    <type>Date</type>
</CustomField>