force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__ResellerAgent__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ResellerAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>APPLICATION (RESELLER AGENT)</relationshipLabel>
    <relationshipName>ApplicationResellerAgent</relationshipName>
    <type>Lookup</type>
</CustomField>