force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__ReturnDueDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReturnDueDate__c</fullName>
    <label>Return Due Date</label>
    <type>Date</type>
</CustomField>