force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__ServiceEndNoticeDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ServiceEndNoticeDate__c</fullName>
    <label>Service End Notice Date</label>
    <type>Date</type>
</CustomField>