force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__ShippingDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ShippingDate__c</fullName>
    <label>Shipping Date</label>
    <type>Date</type>
</CustomField>