force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__ShippingDestinationCompany__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ShippingDestinationCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Destination Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>APPLICATION (Shipping Destination Company)</relationshipLabel>
    <relationshipName>ApplicationShippingDestination</relationshipName>
    <type>Lookup</type>
</CustomField>