force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__ShippingZipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ShippingZipPostalCode__c</fullName>
    <label>Shipping Zip Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>