force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__SupportDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SupportDate__c</fullName>
    <label>Support Date</label>
    <type>DateTime</type>
</CustomField>