force-app/main/default/objects/clofor_com_cfs__Application__c/fields/clofor_com_cfs__UnreturnedFlag__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnreturnedFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unreturned Flag</label>
    <type>Checkbox</type>
</CustomField>