force-app/main/default/objects/clofor_com_cfs__Application__c/recordTypes/clofor_com_cfs__CancelFromCustomer.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__CancelFromCustomer</fullName>
    <active>true</active>
    <label>Cancel from Customer</label>
</RecordType>