force-app/main/default/objects/clofor_com_cfs__Application__c/recordTypes/clofor_com_cfs__CancelToVendor.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__CancelToVendor</fullName>
    <active>false</active>
    <label>Cancel to Vendor</label>
</RecordType>