force-app/main/default/objects/clofor_com_cfs__Application__c/recordTypes/clofor_com_cfs__ChangeFromCustomer.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ChangeFromCustomer</fullName>
    <active>true</active>
    <label>Change from Customer</label>
</RecordType>