force-app/main/default/objects/clofor_com_cfs__Application__c/recordTypes/clofor_com_cfs__ChangeToVendor.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ChangeToVendor</fullName>
    <active>false</active>
    <label>Change to Vendor</label>
</RecordType>