force-app/main/default/objects/clofor_com_cfs__Application__c/recordTypes/clofor_com_cfs__Inquiry.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Inquiry</fullName>
    <active>true</active>
    <label>Inquiry</label>
</RecordType>