force-app/main/default/objects/clofor_com_cfs__Application__c/recordTypes/clofor_com_cfs__NewRegistrationfromCustomer.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__NewRegistrationfromCustomer</fullName>
    <active>true</active>
    <label>New Registration from Customer</label>
</RecordType>