force-app/main/default/objects/clofor_com_cfs__Application__c/recordTypes/clofor_com_cfs__NewRegistrationToVendor.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__NewRegistrationToVendor</fullName>
    <active>false</active>
    <label>New Registration to Vendor</label>
</RecordType>