force-app/main/default/objects/clofor_com_cfs__Application__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Customer__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__ApplicationType__c</columns>
    <columns>clofor_com_cfs__ApplicationStatus__c</columns>
    <columns>clofor_com_cfs__ExpectedNewRegistrationDate__c</columns>
    <columns>clofor_com_cfs__ActualNewRegistrationDate__c</columns>
    <columns>clofor_com_cfs__ExpectedCancelDate__c</columns>
    <columns>clofor_com_cfs__ActualCancelDate__c</columns>
    <columns>clofor_com_cfs__ExpectedChangeDate__c</columns>
    <columns>clofor_com_cfs__ActualChangeDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>